[package]
authors = ["sponges <spongybacon@hotmail.co.uk>", "Zeyla Hellyer <zey@zey.moe>"]
description = "Rust client for Lavalink."
documentation = "https://docs.rs/lavalink"
homepage = "https://github.com/serenity-rs/lavalink.rs"
keywords = ["lavalink"]
license = "ISC"
name = "lavalink"
readme = "README.md"
repository = "https://github.com/serenity-rs/lavalink.rs.git"
version = "0.1.0"

[dependencies]
parking_lot = "^0.5"
percent-encoding = "^1.0"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
base64 = "0.9"
byteorder = "1.2"

[dependencies.futures]
optional = true
version = "~0.1"

[dependencies.hyper]
optional = true
version = "~0.11"

[dependencies.reqwest]
optional = true
version = "~0.8"

[features]
default = ["hyper-support"]
hyper-support = ["futures", "hyper"]
reqwest-support = ["reqwest"]
