[package]
authors = ["sponges <spongybacon@hotmail.co.uk>", "Zeyla Hellyer <hi@zeyla.me>"]
description = "Rust client for Lavalink."
documentation = "https://docs.rs/lavalink"
homepage = "https://github.com/zeyla/lavalink.rs"
keywords = ["lavalink"]
license = "ISC"
name = "lavalink"
readme = "README.md"
repository = "https://github.com/zeyla/lavalink.rs.git"
version = "0.1.0"

[dependencies]
percent-encoding = "^1.0"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
base64 = "0.9"
byteorder = "1.2"

[dependencies.futures]
optional = true
version = "~0.1"

[dependencies.http]
optional = true
version = "0.1"

[dependencies.hyper]
optional = true
version = "~0.12"

[dependencies.log]
optional = true
version = "0.4"

[dependencies.reqwest]
optional = true
version = "~0.8"

[features]
default = ["hyper-support"]
hyper-support = ["futures", "http", "hyper"]
reqwest-support = ["log", "reqwest"]
